--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=2b9a4bd94ece82
+spring.mail.password=0a3898190fb46b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
